[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Interface/Menu-interface/Backgrounds/Main-menu-background.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes_and_scripts/Interfaces/Menus/Main_menu.gd" type="Script" id=3]
[ext_resource path="res://Scenes_and_scripts/Interfaces/Buttons/Btn_lg.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Top_container" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -38.0
margin_right = 102.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Zigmor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_container" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -498.74
margin_bottom = 1.25989
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btns_container" type="VBoxContainer" parent="Bottom_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.189
margin_top = -175.0
margin_right = 148.811
margin_bottom = 175.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_play" parent="Bottom_container/Btns_container" instance=ExtResource( 4 )]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 60.0

[node name="Label" parent="Bottom_container/Btns_container/Btn_play" index="0"]
text = "Jogar"

[node name="Btn_options" parent="Bottom_container/Btns_container" instance=ExtResource( 4 )]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 150.0

[node name="Label" parent="Bottom_container/Btns_container/Btn_options" index="0"]
text = "Opções"

[node name="Btn_credits" parent="Bottom_container/Btns_container" instance=ExtResource( 4 )]
margin_top = 200.0
margin_right = 300.0
margin_bottom = 240.0

[node name="Label" parent="Bottom_container/Btns_container/Btn_credits" index="0"]
text = "Créditos"

[node name="Btn_exit" parent="Bottom_container/Btns_container" instance=ExtResource( 4 )]
margin_top = 290.0
margin_right = 300.0
margin_bottom = 330.0

[node name="Label" parent="Bottom_container/Btns_container/Btn_exit" index="0"]
text = "Sair"

[connection signal="pressed" from="Bottom_container/Btns_container/Btn_play" to="." method="_on_Btn_play_pressed"]
[connection signal="pressed" from="Bottom_container/Btns_container/Btn_options" to="." method="_on_Btn_options_pressed"]
[connection signal="pressed" from="Bottom_container/Btns_container/Btn_credits" to="." method="_on_Btn_credits_pressed"]

[editable path="Bottom_container/Btns_container/Btn_play"]
[editable path="Bottom_container/Btns_container/Btn_options"]
[editable path="Bottom_container/Btns_container/Btn_credits"]
[editable path="Bottom_container/Btns_container/Btn_exit"]
